--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,24 +1,24 @@
-# Translation by Ki Won Kim (http://blog.naver.com/xyz37, xyz37@naver.com)
 ko:
-  wiki_extensions: "확장 위키"
-  label_wikiextensions_tags: "태그"
-  label_wikiextensions_new: "신규"
-  field_auto_preview_enabled: "자동 미리 보기 가능"
-  label_wikiextensions_tab: "탭"
-  wiki_extensions_add_tab: "프로젝트에 탭을 추가합니다."
+  label_wikiextensions_tags: 태그
+  label_wikiextensions_new: 신규
+  wiki_extensions: 위키 확장
+  label_wikiextensions_tab: 탭
+  wiki_extensions_add_tab: "프로젝트 메뉴에 탭을 추가합니다."
+  permission_add_wiki_comment: 위키 댓글을 추가
+  permission_delete_wiki_comments: 위키 댓글을 삭제
+  permission_edit_wiki_comments: 위키 댓글을 수정
+  permission_wiki_extensions_settings: 위키 확장 관리
 
-  permission_add_wiki_comment: "위키 설명 추가"
-  permission_delete_wiki_comments: "위키 설명 삭제"
-  permission_edit_wiki_comments: "위키 설명 수정"
-  permission_wiki_extensions_settings: "확장 위키 관리"
-  field_sidebar_disabled: "사이드 바 금지"
-  wiki_extensions_vote: "투표"
+  field_auto_preview_enabled: 자동 미리보기 활성화
+  field_sidebar_disabled: 사이드바 비활성화
+  wiki_extensions_vote: 평가
 
+  # Wiki comments notification
+  wiki_page_commented_header: "%{author}님이 \"%{project_name}\" 프로젝트의 \"%{page_title}\" 페이지에 댓글을 추가했습니다"
+  wiki_page_commented_comment_head: '댓글:'
+  wiki_page_commented_url: '다음 링크를 통해 댓글과 함께 페이지를 볼 수 있습니다:'
+  label_wiki_comment_added: '위키 댓글이 추가되었습니다'
+  label_wiki_comment_plural: '위키 댓글'
   
-  wiki_page_commented_header: '"%{project_name}" 프로젝트의 "%{page_title}" 위키 페이지의 설명이 %{author}에 의해 추가 되었습니다.'
-  wiki_page_commented_comment_head: "설명:"
-  wiki_page_commented_url: "아래 링크에서 설명을 볼 수 있습니다:"
-  label_wiki_comment_added: "위키 설명 추가"
-  label_wiki_comment_plural: "위키 설명"
-  
-  wiki_extensions_new_wiki_page: "새 페이지"
+  wiki_extensions_new_wiki_page: '새 페이지'
+  field_tag_disabled: '태그 기능 비활성화'
